# Cargo.toml

[package]
name = "ODM_"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
futures-util = "0.3"
sha2 = "0.10"

# Cargo.toml

# ... (other dependencies like tokio, reqwest, etc. are unchanged) ...

# --- CORRECTED DATABASE DEPENDENCIES ---

# This crate needs rusqlite v0.29
tokio-rusqlite = "0.4"

# So, we explicitly depend on rusqlite v0.29 and enable the feature here.
# This makes both dependencies agree on the same version.
rusqlite = { version = "0.29", features = ["bundled"] }

serde_json = "1.0"
anyhow = "1.0.98"

# Add dev-dependencies for testing utilities
[dev-dependencies]
anyhow = "1.0.98"
