# Cargo.toml

[package]
name = "ODM_"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
futures-util = "0.3"
sha2 = "0.10"
# --- CORRECTED FEATURE ---
tokio-util = { version = "0.7", features = ["rt"] } # Change "sync" to "rt"

tokio-rusqlite = "0.4"
rusqlite = { version = "0.29", features = ["bundled"] }
serde_json = "1.0"

# Note: You have anyhow in both [dependencies] and [dev-dependencies].
# You only need it in one. Since main.rs is part of the binary crate,
# let's keep it in [dependencies] and remove it from [dev-dependencies].
anyhow = "1.0"

# Add dev-dependencies for testing utilities
[dev-dependencies]
# No dependencies needed here for now if anyhow is in the main list.